# DeepRezearch

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  test.py  tool.py
.github/workflows/: lint.yaml
agents/: base_agent.py  coding_agent  coding_agent.py  prompts.py  research_agent.py  synthesis_agent.py
agents/coding_agent/: code_analyzer.py  code_builder.py  code_config.py  code_generator.py  code_interfaces.py  code_reviewer.py  code_state.py  coder_input.py  coding_agent.py  coding_agent_factory.py
agents/orchestrator/: orchestrator.py  orchestrator_builder.py  orchestrator_config.py  orchestrator_state.py
agents/research_agent/: research_agent.py  research_builder.py  research_config.py  research_state.py
agents/synthesis_agent/: synthesis_agent.py  synthesis_builder.py  synthesis_config.py  synthesis_state.py
core/: config.py  graph.py  orchestrator.py  state.py  template_manager.py  test_orchestrator.py
core/workflows/: abstract_wf.py  coding_wf.py  research_wf.py  synt_wf.py
prompts/coding_agent/: CODE_GENERATION_PROMPT.jinja  CODE_GENERATION_TEMPLATE.jinja  CODE_REVIEW_PROMPT.jinja  CODE_REVIEW_TEMPLATE.jinja  CODING_ANALYSIS_PROMPT.jinja  TASK_ANALYSIS_TEMPLATE.jinja
prompts/orchestrator/: ANALYSIS_PROMPT.jinja  DECISION_SCHEMA.jinja  SYSTEM_PROMPT.jinja  WORKFLOW_INPUT_PROMPT.jinja  WORKFLOW_TYPE_PROMPT.jinja  macros.jinja
prompts/research_agent/: ANSWER.jinja  FINAL_ANSWER_TEMPLATE.jinja  FINAL_SUMMARY_PROMPT.jinja  (+4 more)
rewrite/: copypasta.py  prompt.py  test.py  workflow.py
tools/: tool.py
(+2 files in other folders)
