[project]
name = "rezearcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "ddgs>=9.7.1",
    "html-to-markdown>=2.9.1",
    "langchain>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.0",
    "langchain-ollama>=1.0.0",
    "langgraph>=1.0.2",
    "loguru>=0.7.3",
    "reportlab>=4.4.4",
]
